--- a/app/src/main/res/layout/message_in_item_view.xml
+++ b/app/src/main/res/layout/message_in_item_view.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/messageInAuthor"
+        android:id="@+id/messageAuthor"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="@dimen/padding"
         style="@style/textGrey"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         style="@style/textRegular"
         android:id="@+id/messageText"
-        android:layout_below="@id/messageInAuthor"
+        android:layout_below="@id/messageAuthor"
         android:background="@drawable/message_in"
         android:text="@string/messageContent"
         android:layout_alignParentLeft="true"/>
