dodano widok listy userow i mozliwosc tworzenia nowej konwersacji

--- a/app/src/main/res/layout/user_item_view.xml
+++ b/app/src/main/res/layout/user_item_view.xml
@@ -9,7 +9,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/profileImage"
-        app:srcCompat="@drawable/ic_message" />
+        app:srcCompat="@drawable/ic_profile_pic" />
 
     <TextView
         android:layout_width="wrap_content"
