--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -7,6 +7,11 @@
         android:icon="@drawable/ic_baseline_home_24" />
 
     <item
+        android:id="@+id/profile"
+        android:title="Profil"
+        android:icon="@drawable/ic_baseline_person_24" />
+
+    <item
         android:id="@+id/calendar"
         android:title="@string/kalendarz"
         android:icon="@drawable/ic_baseline_calendar_today_24" />
@@ -25,5 +30,10 @@
         android:id="@+id/chat"
         android:title="@string/chat"
         android:icon="@drawable/ic_baseline_chat_24" />
+
+    <item
+        android:id="@+id/logout"
+        android:title="Wyloguj"
+        android:icon="@drawable/ic_baseline_login_24" />
 
 </menu>
