--- a/app/src/main/res/layout/group_list_view.xml
+++ b/app/src/main/res/layout/group_list_view.xml
@@ -1,32 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GroupList"
-    android:id="@+id/DrawerLayout">
+    tools:context=".GroupList">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_baseline_menu_24" />
     <TextView
         android:id="@+id/taskGroupsTextView"
-        android:layout_width="141dp"
-        android:layout_height="70dp"
+        style="@style/textMedium"
+        android:layout_width="190dp"
+        android:layout_height="48dp"
         android:layout_marginTop="40dp"
         android:text="@string/groupHeader"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.855"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,55 +21,51 @@
 
     <TextView
         android:id="@+id/groupNameTextView"
-        android:layout_width="154dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="44dp"
+        style="@style/textGreyMedium"
+        android:layout_width="151dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="20dp"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.442"
+        app:layout_constraintHorizontal_bias="0.303"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskGroupsTextView" />
 
     <TextView
         android:id="@+id/tasktToDoTextView"
-        android:layout_width="171dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="32dp"
+        style="@style/textGreySmall"
+        android:layout_width="231dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="4dp"
         android:text="@string/taskToDo"
+
+        android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.404"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/groupNameTextView" />
 
-    <Button
-        android:id="@+id/seeUsersBtn"
-        android:layout_width="190dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="188dp"
-        android:text="@string/seeFellows"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.438"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/taskRecyclerview"
-        android:layout_width="249dp"
-        android:layout_height="144dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="159dp"
+        android:layout_height="135dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintHorizontal_bias="0.309"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tasktToDoTextView" />
-</androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigation_view"
+    <TextView
+        android:id="@+id/seeFellows"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:menu="@menu/drawermenu"
-        app:headerLayout="@layout/header"
-        tools:ignore="MissingConstraints" />
-
-</androidx.drawerlayout.widget.DrawerLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:clickable="true"
+        android:text="@string/seeFellows"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.374"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskRecyclerview"
+        style= "@style/textBlueSmall"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
