--- a/app/src/main/res/layout/calendar_view.xml
+++ b/app/src/main/res/layout/calendar_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:barrierMargin="14dp"
-    tools:context=".Calendar"
+    tools:context=".CalendarActivity"
     android:id="@+id/DrawerLayout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
